Release v3.1.5

New:
- **Settings Shortcut**: Added a Settings (gear) icon to the shelf when it's empty. This ensures you can always access preferences, even if the menu bar icon is hidden.

Fixed in v3.1.4:
- **Icon Compatibility**: Ensured the new app icon uses the correct PNG format for compatibility with all macOS versions.